<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="info.scoutApp.jagscoutapp3_1.Main3Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Title3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameView"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText" />

        <TextView
            android:id="@+id/match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameMatch"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText" />

        <TextView
            android:id="@+id/robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameRobot"/>

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        tools:context="info.scoutApp.jagscoutapp3_1.Main3Activity"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/climbedRadioButton" />

        <Switch
                android:id="@+id/climbed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/levelCheckBox" />

        <Switch
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rendezvousRadioButton" />

        <Switch
                android:id="@+id/rendezvous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neitherRadioButton" />

        <Switch
                android:id="@+id/none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:text="@string/plainTextNotes" />

        <EditText
            android:id="@+id/matchNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:text="@string/notesSpace" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/endRoundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endRoundButton" />

        <Button
            android:id="@+id/viewData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewDataButton" />

        <Button
            android:id="@+id/BtnEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/submitButton" />
    </LinearLayout>


</LinearLayout>