<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/darkBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Title1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:text="@string/plainTextMatch" />

    <EditText
        android:id="@+id/matchNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:ems="2"

        android:hint="@string/matchInput" />

    <TextView
        android:id="@+id/plainTextRobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_weight=".5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/plainTextRobot" />

    <EditText
        android:id="@+id/robotNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/robotNumber" />


</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:baselineAligned="true"
android:orientation="horizontal">


<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:layout_weight="1"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/plainTextCollector" />

<EditText
    android:id="@+id/personName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:ems="5"
    android:inputType="textPersonName"
    android:hint="@string/collectorName" />
</LinearLayout>

<Space
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_weight="2.5"/>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal">

<Button
    android:id="@+id/BtnStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/button_rounded"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/startButton" />
</LinearLayout>




</LinearLayout>