<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Title2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameView"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText" />

        <TextView
            android:id="@+id/match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameMatch"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText" />

        <TextView
            android:id="@+id/robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nameRobot"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"

                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"

                android:textColor="@color/black"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/darkBlue">


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powercellPoints"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TableRow>

                    <Button
                        android:id="@+id/innerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/darkGreen"
                        android:onClick="CountInner"
                        android:text="@string/innerButton"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/minusInner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:onClick="MinusInner"
                        android:text="@string/minusButtons" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>


                    <Button
                        android:id="@+id/outerButton"
                        style="android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lightBlue"
                        android:onClick="CountOuter"
                        android:text="@string/outerButton" />


                    <Button
                        android:id="@+id/minusOuter"
                        style="android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="MinusOuter"
                        android:text="@string/minusButtons" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/lowerButton"
                        style="android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/yellow"
                        android:onClick="CountLower"
                        android:text="@string/lowerButton" />

                    <Button
                        android:id="@+id/minusLower"
                        style="android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="MinusLower"
                        android:text="@string/minusButtons" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/missedShotButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:onClick="CountMissed"
                        android:text="@string/missedShotButton" />
                </TableRow>


            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />


            <Button
                android:id="@+id/penaltyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:onClick="CountPenalty"
                android:text="@string/penaltyButton" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plainTextAutonomous"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/driveOffLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/darkGreen"
                        android:hint="Drive off Line"

                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                </TableRow>

            </TableLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plainTextControlCenter"
                        android:textColor="@color/black" />
                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/rotation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/lightBlue"
                        android:hint="Rotation Control" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/yellow"
                        android:hint="Position Control" />
                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/BtnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:text="@string/closeMatchButton" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
